--- a/Web/packages.config
+++ b/Web/packages.config
@@ -6,9 +6,9 @@
   <package id="AutoMapper" version="3.3.0" targetFramework="net453" />
   <package id="bootstrap" version="3.0.0" targetFramework="net453" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net453" />
-  <package id="jQuery" version="1.10.2" targetFramework="net453" />
+  <package id="jQuery" version="2.1.3" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net453" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net453" />
+  <package id="jQuery.Validation" version="1.13.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net453" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net453" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net453" />
@@ -20,6 +20,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net453" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net453" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net453" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net453" />
