CREATE DATABASE permission denied in database 'master'.

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -111,7 +111,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
+  <!--<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -120,5 +120,5 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
-  </entityFramework>
+  </entityFramework>-->
 </configuration>
