fixing apphb deployment

--- a/Source/Web/Web.Debug.config
+++ b/Source/Web/Web.Debug.config
@@ -15,8 +15,8 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add name="ApplicationContext" connectionString="data source=localhost;initial catalog=Financials;integrated security=sspi;multipleactiveresultsets=true;Pooling=false" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-    <add name="ApplicationDbContext" connectionString="data source=localhost;initial catalog=Financials;integrated security=sspi;multipleactiveresultsets=true;Pooling=false" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ApplicationContext" connectionString="data source=localhost;initial catalog=AccountGo;integrated security=sspi;multipleactiveresultsets=true;Pooling=false" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ApplicationDbContext" connectionString="data source=localhost;initial catalog=AccountGo;integrated security=sspi;multipleactiveresultsets=true;Pooling=false" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   <system.web>
     <!--
