--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
+  <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net46" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.6" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
@@ -34,7 +35,7 @@
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
