--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -36,6 +36,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net46" />
+  <package id="NReco.PdfGenerator" version="1.1.11.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
