--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -221,6 +221,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ControllersApi\CommonController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdministrationController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -238,6 +239,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ModelsApi\Financial\AccountDto.cs" />
+    <Compile Include="ModelsApi\Inventory\TaxGroupDto.cs" />
+    <Compile Include="ModelsApi\Inventory\ItemCategoryDto.cs" />
+    <Compile Include="ModelsApi\Inventory\ItemDto.cs" />
+    <Compile Include="ModelsApi\Purchasing\VendorDto.cs" />
+    <Compile Include="ModelsApi\Sales\CustomerDto.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ErrorMessageViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
