use web api to provide look-up data, i.e. accounts, customers, etc. … ModelViewHelper calls the web api. Add BaseUrl in webconfig

--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -17,6 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BaseUrl" value="http://accountgo.apphb.com/"/>
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
