--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Data\packages.config" />
+  <repository path="..\Source\Data\packages.config" />
+  <repository path="..\Source\Web\packages.config" />
   <repository path="..\Web\packages.config" />
 </repositories>
