--- a/Source/Data/packages.config
+++ b/Source/Data/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.Cache" version="1.0.0" targetFramework="net46" />
 </packages>
