--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -7,6 +7,7 @@
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.6" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.Cache" version="1.0.0" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
