fix customer contact assignment

--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -247,6 +247,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CollectionHelper.cs" />
+    <Compile Include="ModelsApi\ContactDto.cs" />
     <Compile Include="ModelsApi\Financial\AccountDto.cs" />
     <Compile Include="ModelsApi\Inventory\TaxGroupDto.cs" />
     <Compile Include="ModelsApi\Inventory\ItemCategoryDto.cs" />
