--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -6,6 +6,9 @@
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.5" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net46" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net46" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
