--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -10,6 +10,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    <sectionGroup name="elmah">
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+    </sectionGroup>  
   </configSections>
 
   <connectionStrings>
@@ -45,8 +48,8 @@
     <modules>
       <remove name="FormsAuthentication" />
       <add name="PdfModule" type="PdfModule" />
-
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />      
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -55,6 +58,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 
       <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+      <add name="Elmah" type="Elmah.ErrorLogPageFactory, Elmah" path="elmah.axd" preCondition="integratedMode" verb="POST,GET,HEAD" />      
     </handlers>
 
     <validation validateIntegratedModeConfiguration="false" />
