--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Domain\Items\Item.cs" />
     <Compile Include="Domain\Items\ItemCategory.cs" />
     <Compile Include="Domain\Items\Measurement.cs" />
+    <Compile Include="Domain\Log.cs" />
     <Compile Include="Domain\TaxSystem\ItemTaxGroup.cs" />
     <Compile Include="Domain\Party.cs" />
     <Compile Include="Domain\PaymentTerm.cs" />
