--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -25,7 +25,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="BaseUrl" value="http://accountgo.apphb.com/" />
+    <add key="BaseUrl" value="http://accountgo.cloudapp.net/" />
     <!--<add key="BaseUrl" value="http://localhost:25710/" />-->
   </appSettings>
   <!--
