--- a/src/WebAngular/Properties/launchSettings.json
+++ b/src/WebAngular/Properties/launchSettings.json
@@ -4,13 +4,14 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:44635/",
-      "sslPort": 0
+      "sslPort": 44385
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "https://localhost:44385/",
       "environmentVariables": {
         "Hosting:Environment": "Development"
       }
