--- a/src/WebAngular/package.json
+++ b/src/WebAngular/package.json
@@ -1,18 +1,19 @@
 {
   "version": "1.0.0",
-  "name": "WebAngular",
-  "private": true,
+  "name": "ASP.NET",
   "dependencies": {
-    "angular2": "^2.0.0-beta.7",
-    "systemjs": "^0.19.23",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "^0.1.3",
+    "angular2": "2.0.0-beta.8",
+    "systemjs": "0.19.23",
+    "es6-promise": "3.1.2",
+    "es6-shim": "0.33.3",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "^0.6.1"
+    "zone.js": "0.5.15"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "rimraf": "^2.4.4"
+    "gulp": "3.8.11",
+    "gulp-concat": "2.5.2",
+    "rimraf": "2.2.8",
+    "gulp-cssmin": "^0.1.7"
   }
 }
