--- a/src/WebAngular/package.json
+++ b/src/WebAngular/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
-    "rimraf": "2.2.8",
-    "gulp-cssmin": "^0.1.7"
+    "gulp-cssmin": "^0.1.7",
+    "gulp-uglify": "^1.5.3",
+    "rimraf": "2.2.8"
   }
 }
