add app.html for index page

--- a/src/WebAngular/appsettings.json
+++ b/src/WebAngular/appsettings.json
@@ -12,5 +12,11 @@
       "ClientId": "3aa0f461-e798-42f2-9b44-652c7bec898e",
       "AADInstance": "https://login.microsoftonline.com/"
     }
+  },
+  "ApiBaseAddress": {
+    "Development": {
+      "Url": "http://localhost:32790/api"
+    },
+    "Production": ""
   }
 }
