--- a/src/WebAngular/bower.json
+++ b/src/WebAngular/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "WebAngular",
+  "name": "webangular",
   "private": true,
   "dependencies": {
-    "bootstrap": "3.3.6",
-    "jquery": "2.2.1",
-    "jquery-validation": "1.15.0",
-    "jquery-validation-unobtrusive": "3.2.6"
+    "bootstrap": "3.3.5",
+    "jquery": "2.1.4",
+    "jquery-validation": "1.14.0",
+    "jquery-validation-unobtrusive": "3.2.4"
   }
 }
