--- a/src/WebAngular/package.json
+++ b/src/WebAngular/package.json
@@ -1,20 +1,26 @@
 {
-  "version": "1.0.0",
-  "name": "ASP.NET",
+  "name": "webangular",
+  "version": "0.0.0",
   "dependencies": {
     "angular2": "2.0.0-beta.9",
-    "systemjs": "0.19.24",
-    "es6-promise": "3.1.2",
-    "es6-shim": "0.33.3",
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
+    "less": "^2.5.3",
+    "lodash": "^3.10.1",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "systemjs": "^0.19.3"
   },
   "devDependencies": {
-    "gulp": "3.8.11",
-    "gulp-concat": "2.5.2",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-uglify": "^1.5.3",
-    "rimraf": "2.2.8"
-  }
+    "del": "^2.0.2",
+    "event-stream": "^3.3.1",
+    "gulp": "^3.9.0",
+    "gulp-inline-ng2-template": "0.0.7",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.9.0",
+    "typescript": "^1.6.2"
+   },
+   "scripts": {
+     "tsc" : "tsc -p . -w",
+     "start" : "gulp build-dev && nodemon --ignore htm,html --ext cs,js --exec \"dnx web\" -V"
+   }
 }
