--- a/src/WebAngular/bower.json
+++ b/src/WebAngular/bower.json
@@ -2,9 +2,12 @@
   "name": "webangular",
   "private": true,
   "dependencies": {
-    "bootstrap": "3.3.5",
+    "bootstrap": "3.3.6",
+    "bootstrap-theme-cosmo": "3.1.1",
     "jquery": "2.1.4",
     "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.4"
+    "jquery-validation-unobtrusive": "3.2.4",
+    "respond": "1.4.2",
+    "modernizr": "3.3.1"
   }
 }
