--- a/src/WebApp/package.json
+++ b/src/WebApp/package.json
@@ -3,10 +3,10 @@
   "name": "webapp",
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.3",
     "d3": "^3.5.17",
     "datatables": "^1.10.11",
-    "datatables-bootstrap": "^0.0.1"
+    "datatables-bootstrap": "^0.0.1",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -20,7 +20,6 @@
     "react-dom": "^15.0.2",
     "ts-loader": "^0.8.2",
     "tsd": "^0.6.5",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.1"
+    "typescript": "^1.8.10"
   }
 }
