--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -3,14 +3,19 @@
   "name": "accountgoweb",
   "private": true,
   "devDependencies": {
-    "bootstrap": "^3.3.6",
     "gulp": "^3.9.1",
-    "jquery": "^2.2.4",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
     "ts-loader": "^0.8.2",
     "tsd": "^0.6.5",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "mobx-react-devtools": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.12.0",
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.2.4",
+    "mobx": "^2.3.0",
+    "mobx-react": "^3.3.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
+  }
 }
