--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -3,19 +3,19 @@
   "name": "accountgoweb",
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "ts-loader": "^0.8.2",
-    "tsd": "^0.6.5",
-    "typescript": "^1.8.10",
+    "gulp": "latest",
+    "ts-loader": "latest",
+    "tsd": "latest",
+    "typescript": "latest",
     "mobx-react-devtools": "^4.2.0"
   },
   "dependencies": {
-    "axios": "^0.12.0",
-    "bootstrap": "^3.3.6",
-    "jquery": "^2.2.4",
-    "mobx": "^2.3.0",
-    "mobx-react": "^3.3.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "axios": "latest",
+    "bootstrap": "latest",
+    "jquery": "2.2.4",
+    "mobx": "latest",
+    "mobx-react": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
