--- a/src/AccountGoWeb/project.json
+++ b/src/AccountGoWeb/project.json
@@ -43,6 +43,8 @@
   "publishOptions": {
     "include": [
       "wwwroot",
+      "Views",
+      "appsettings.json",
       "web.config"
     ]
   },
