setting up react/mobx/typescript usage on sales order form.

--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -16,6 +16,8 @@
     "mobx": "latest",
     "mobx-react": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "d3": "latest",
+    "react-router": "latest"
   }
 }
