add ag-grid and ag-grid-react

--- a/src/AccountGoWeb/project.json
+++ b/src/AccountGoWeb/project.json
@@ -25,7 +25,13 @@
   },
 
   "frameworks": {
-    "net461": {}
+    "net461": {
+      "dependencies": {
+        "Model": {
+          "target": "project"
+        }
+      }
+    }
     //"netcoreapp1.0": {
     //  "imports": [
     //    "dotnet5.6",
