--- a/src/AccountGoWeb/project.lock.json
+++ b/src/AccountGoWeb/project.lock.json
@@ -1823,6 +1823,9 @@
         "runtime": {
           "lib/net46/System.Xml.XPath.XDocument.dll": {}
         }
+      },
+      "Model/1.0.0": {
+        "type": "project"
       }
     }
   },
@@ -5670,6 +5673,10 @@
         "ref/xamarintvos10/_._",
         "ref/xamarinwatchos10/_._"
       ]
+    },
+    "Model/1.0.0": {
+      "type": "project",
+      "msbuildProject": "../Model/Model.csproj"
     }
   },
   "projectFileDependencyGroups": {
@@ -5687,7 +5694,9 @@
       "Microsoft.Extensions.Logging.Debug >= 1.0.0",
       "Microsoft.Net.Http >= 2.2.22"
     ],
-    ".NETFramework,Version=v4.6.1": []
+    ".NETFramework,Version=v4.6.1": [
+      "Model"
+    ]
   },
   "tools": {
     ".NETCoreApp,Version=v1.0": {
