--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -18,6 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "d3": "latest",
-    "react-router": "latest"
+    "react-router": "latest",
+    "ag-grid": "latest",
+    "ag-grid-react": "latest"
   }
 }
