--- a/src/AccountGoWeb/project.json
+++ b/src/AccountGoWeb/project.json
@@ -15,7 +15,9 @@
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "Microsoft.Net.Http": "2.2.22"
+    "Microsoft.Net.Http": "2.2.22",
+    "Microsoft.AspNetCore.Authentication": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0"
   },
 
   "tools": {
