--- a/src/AccountGoWeb/project.json
+++ b/src/AccountGoWeb/project.json
@@ -27,7 +27,13 @@
   },
 
   "frameworks": {
-    "net461": { }
+    "net461": {
+      "dependencies": {
+        "Dto": {
+          "target": "project"
+        }
+      }
+    }
     //"netcoreapp1.0": {
     //  "imports": [
     //    "dotnet5.6",
