--- a/.gitignore
+++ b/.gitignore
@@ -192,6 +192,9 @@ FakesAssemblies/
 **/src/[Ww]eb[Aa]pp/wwwroot/[Ll]ibs/*
 **/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/plugins/*
 **/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/[Ll]ibs/*
+**/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/[Ss]cripts/*
+**/src/[Aa]ccount[Gg]o[Ww]eb/project.fragment.lock.json
+**/src/[Aa]ccount[Gg]o[Ww]eb/project.lock.json
 
 # node modules
 **/src/[Ww]eb[Aa]ngular/node_modules
