install accounting.js package. fix issue in running total wrong computation.

--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -22,6 +22,7 @@
     "ag-grid": "latest",
     "ag-grid-react": "latest",
     "knockout": "latest",
-    "knockout-mapping": "latest"
+    "knockout-mapping": "latest",
+    "accounting": "^0.4.1"
   }
 }
